# large-legislative-models

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  title.txt
large_legislative_models/: __init__.py  config.py  globals.py  main.py
large_legislative_models/environment/: __init__.py  cer.py  meltingpot_utils.py  transforms.py  vector_envs.py
large_legislative_models/neural/: agent_architectures.py
large_legislative_models/principal/: __init__.py  bandit_principals.py  basic_principals.py  bayesian_principals.py  core_principals.py  llm_utils.py  prompts.py
large_legislative_models/training/: algorithms.py  collection.py  optimize.py
large_legislative_models/utils/: __init__.py  buffer.py  context.py  logger.py  loss_calculation_utils.py
scripts/: config_dicts.py  kill_parallel_runs.sh  remote_parallel_gridsearch.py
tests/: test_cer.py  test_transforms.py
